--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "git-commit-msg-linter": "^4.2.1",
+    "i": "^0.3.7",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
