--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
     "git-commit-msg-linter": "^4.2.1",
     "i": "^0.3.7",
     "typescript": "^4.8.4",
