chore: add husky and lint staged

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@vitejs/plugin-react": "^2.1.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "git-commit-msg-linter": "^4.2.1",
+    "husky": "^8.0.1",
     "i": "^0.3.7",
+    "lint-staged": "^13.0.3",
     "typescript": "^4.8.4",
     "vite": "^3.1.0"
   }
