--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.2.0",
     "@types/node": "^18.11.8",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
@@ -25,7 +27,9 @@
     "git-commit-msg-linter": "^4.2.1",
     "husky": "^8.0.1",
     "i": "^0.3.7",
+    "jest": "^29.2.2",
     "lint-staged": "^13.0.3",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.8.4",
     "vite": "^3.1.0"
   }
