--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "teste:staged": "jest"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
